<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtApellido"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTelefono"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTelefono"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="78dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCuidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCiudad"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="118dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:text="@string/btnEditar"
            android:background="@drawable/baseline_edit_24"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:text="@string/btnEliminar"
            android:background="@drawable/baseline_delete_24"/>

        <Button
            android:id="@+id/btnDetalles"
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:text="@string/btnDetalles"
            android:background="@drawable/baseline_visibility_24"/>

    </LinearLayout>

</LinearLayout>